--- a/pro-so/src/style/style.scss
+++ b/pro-so/src/style/style.scss
@@ -16,6 +16,7 @@ body {
 
 .header {
   text-align: center;
+  font-weight: 600;
 }
 
 .menuContainer {
@@ -33,12 +34,12 @@ body {
   color: #2F5D62;
   margin-left: 10px;
   padding: 10px;
-  border: 3px solid #2F5D62;
+  border: 1px solid #2F5D62;
   border-radius: 5px;
 }
 /*#ff5f2e*/
 .menu li:hover {
-  background-color: #d9e1e8;
+  background-color: #dfeeea;
   cursor: pointer;
 }
 
@@ -47,7 +48,7 @@ body {
   color: #2F5D62;
   margin-left: 10px;
   padding: 9px;
-  border: 3px solid #2F5D62;
+  border: 1px solid #2F5D62;
   border-radius: 5px;
 }
 
@@ -73,8 +74,7 @@ body {
 
 .boardTitle {
   text-align: center;
-  font-size: 30px;
-  font-weight: 500;
+  font-size: 25px;
 }
 
 .boardTitle p {
